--- a/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/app/ejemplo01-ngfor-ngif/ejemplo01-ngfor-ngif.component.html
+++ b/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/app/ejemplo01-ngfor-ngif/ejemplo01-ngfor-ngif.component.html
@@ -2,7 +2,7 @@
   Contenido de la variable: {{variableDeInstancia}}
 </p>
 <br/>
-<button (click)="cambiarEstadoInformacion()">Mostrar Informacion</button>
+<button (click)="cambiarEstadoInformacion()">Mostrar u ocultar Informacion</button>
 <span *ngIf="mostrarInformacion">
     Informacion mostrada
 </span>
