--- a/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/app/app.component.html
+++ b/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>
   {{title}}
 </h1>
-<app-numeros-primos-fila [numero]="numerillo">Cargando fila</app-numeros-primos-fila>
+  <app-numeros-primos-leyenda>
+    Cargando Leyenda
+  </app-numeros-primos-leyenda>
+ <app-numeros-primos-panel>Test</app-numeros-primos-panel>
