--- a/javascript/ejemplo06-angular2/ejemplo-03-enrutado/src/app/formulario-libro/formulario-libro.component.html
+++ b/javascript/ejemplo06-angular2/ejemplo-03-enrutado/src/app/formulario-libro/formulario-libro.component.html
@@ -1,3 +1,6 @@
-<p>
-  formulario-libro works!
-</p>
+<form #form="ngForm" (ngSubmit)="enviarFormulario(form.value)">
+  <label>Titulo del libro</label>
+  <input type="text" 
+  name="titulo" [(ngModel)]="libro.titulo" required/>
+  <button type="submit">Enviar</button>
+</form>
