--- a/javascript/ejemplo-10-socketio/socketio-angular2/src/app/app.component.html
+++ b/javascript/ejemplo-10-socketio/socketio-angular2/src/app/app.component.html
@@ -2,3 +2,7 @@
   {{title}}
 </h1>
 <br/><app-chat>Loading chat</app-chat>
+<app-chat>Loading chat</app-chat>
+<app-chat>Loading chat</app-chat>
+<app-chat>Loading chat</app-chat>
+<app-chat>Loading chat</app-chat>
