Fin ejemplo jwt

--- a/javascript/ejemplo11-passport/ejemplo05-angular2-jwp/src/app/login/login.component.html
+++ b/javascript/ejemplo11-passport/ejemplo05-angular2-jwp/src/app/login/login.component.html
@@ -1,3 +1,5 @@
 <p>
-  login works!
+  Usuario: <input type="text" name="username" [(ngModel)]="user.username"/><br/>
+  Password: <input type="password" name="pass" [(ngModel)]="user.pass" /><br/>
+  <button (click)="autenticar()">Autenticar</button>
 </p>
